--- a/openshift/templates/issuer-agent/config/test/ledgers-candy.yaml
+++ b/openshift/templates/issuer-agent/config/test/ledgers-candy.yaml
@@ -1,8 +1,8 @@
-- id: CANdyDev
+- id: CANdyTest
   is_production: true
   is_write: true
-  genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/dev/pool_transactions_genesis'
-- id: SOVRINSandbox
+  genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/test/pool_transactions_genesis'
+- id: SovrinStagingNet
   is_production: true
   genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis'
 - id: BCovrinTest
