--- a/openshift/templates/issuer-agent/config/dev/ledgers-bcreg.yaml
+++ b/openshift/templates/issuer-agent/config/dev/ledgers-bcreg.yaml
@@ -2,7 +2,7 @@
   is_production: true
   is_write: true
   genesis_url: 'http://test.bcovrin.vonx.io/genesis'
-- id: SOVRINSandbox
+- id: SovrinStagingNet
   is_production: true
   genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis'
 - id: CANdyDev
