--- a/openshift/templates/issuer-agent/config/prod/ledgers-candy.yaml
+++ b/openshift/templates/issuer-agent/config/prod/ledgers-candy.yaml
@@ -1,8 +1,9 @@
-- id: CANdyDev
+# Note:- CANdy 'prod' does not not exist yet.
+- id: CANdyProd
   is_production: true
   is_write: true
-  genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/dev/pool_transactions_genesis'
-- id: SOVRINLive
+  genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis'
+- id: SovrinMainNet
   is_production: true
   genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_live_genesis'
 - id: BCovrinTest
