--- a/openshift/templates/issuer-agent/config/prod/ledgers.yaml
+++ b/openshift/templates/issuer-agent/config/prod/ledgers.yaml
@@ -1,10 +1,11 @@
-- id: SOVRINLive
+- id: SovrinMainNet
   is_production: true
   is_write: true
   genesis_url: 'https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_live_genesis'
 - id: BCovrinTest
   is_production: true
   genesis_url: 'http://test.bcovrin.vonx.io/genesis'
-- id: CANdyDev
+# Note:- CANdy 'prod' does not not exist yet.
+- id: CANdyProd
   is_production: true
-  genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/dev/pool_transactions_genesis'
+  genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis'
