--- a/openshift/templates/backup/config/backup.conf
+++ b/openshift/templates/backup/config/backup.conf
@@ -55,6 +55,7 @@ postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
 postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim/agent_idim_wallet
 postgres=wallet-idim-sit/agent_idim_sit_wallet
+postgres=wallet-idim-qa/agent_idim_qa_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
