Label routes to be managed by certbot
Signed-off-by: Wade Barnes <wade@neoterictech.ca>

--- a/openshift/templates/issuer-admin/issuer-admin-deploy.yaml
+++ b/openshift/templates/issuer-admin/issuer-admin-deploy.yaml
@@ -224,6 +224,7 @@ objects:
         app.kubernetes.io/part-of: ${APP_NAME}${SUFFIX}
         role: ${ROLE}
         env: ${TAG_NAME}
+        certbot-managed: ${CERTBOT_MANAGED_ROUTE}
       name: ${NAME}${SUFFIX}
     spec:
       host: ${APPLICATION_DOMAIN}
@@ -361,6 +362,11 @@ parameters:
     displayName: Application Hostname
     name: APPLICATION_DOMAIN
     value: ""
+  - name: CERTBOT_MANAGED_ROUTE
+    displayName: Certbot Managed Route
+    description: Flag indicating whether the routes certificates are managed by CertBot.
+    required: true
+    value: 'false'
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the image to use for this resource.
