--- a/openshift/templates/issuer-web/config/bcvcpilot/prod/config.json
+++ b/openshift/templates/issuer-web/config/bcvcpilot/prod/config.json
@@ -1,7 +1,7 @@
 {
   "env": "prod",
   "issuer": {
-    "name": "BCVCPilot - Trust Over IP"
+    "name": "Digital Identity and Trust"
   },
   "inviteRequired": true,
   "deepLinkPrefix":"bcwallet://aries_connection_invitation",
