--- a/openshift/templates/issuer-web/config/bcvcpilot/prod/config.json
+++ b/openshift/templates/issuer-web/config/bcvcpilot/prod/config.json
@@ -9,7 +9,7 @@
     "enabled": false,
     "autoSignOut": true,
     "oidcSettings": {
-      "authority": "https://oidc.gov.bc.ca/auth/realms/gzyg46lx",
+      "authority": "https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz",
       "clientId": "bcvcpilot-web",
       "redirectUri": "https://bcvcpilot.vonx.io/oidc-callback",
       "redirect_uri": "https://bcvcpilot.vonx.io/oidc-callback-error",
