--- a/openshift/templates/tails-server/tails-server-build.yaml
+++ b/openshift/templates/tails-server/tails-server-build.yaml
@@ -92,7 +92,7 @@ parameters:
     displayName: Source Image Name
     description: The name of the runtime image.
     required: true
-    value: docker-remote.artifacts.developer.gov.bc.ca/bcgovimages/von-image:next-1
+    value: artifacts.developer.gov.bc.ca/docker-remote/bcgovimages/von-image:next-1
   - name: OUTPUT_IMAGE_TAG
     displayName: Output Image Tag
     description: The tag given to the built image.
