--- a/openshift/templates/orgbook-issuer-controller/orgbook-issuer-controller-deploy.yaml
+++ b/openshift/templates/orgbook-issuer-controller/orgbook-issuer-controller-deploy.yaml
@@ -160,7 +160,7 @@ objects:
             from:
               kind: ImageStreamTag
               namespace: ${IMAGE_NAMESPACE}
-              name: ${NAME}${SUFFIX}:${TAG_NAME}
+              name: ${NAME}:${TAG_NAME}
       replicas: 1
       selector:
         name: ${NAME}${SUFFIX}
@@ -296,7 +296,7 @@ parameters:
     displayName: Name
     description: The name assigned to all of the objects defined in this template.
     required: true
-    value: controller
+    value: orgbook-issuer-controller
   - name: ROLE
     displayName: Role
     description: Role
