--- a/openshift/templates/orgbook-issuer-controller/orgbook-issuer-controller-build.yaml
+++ b/openshift/templates/orgbook-issuer-controller/orgbook-issuer-controller-build.yaml
@@ -102,7 +102,7 @@ parameters:
     displayName: Source Image Name
     description: The name of the Docker image to be used for the build. Overrides the FROM instruction in the Dockerfile.
     required: false
-    value: artifacts.developer.gov.bc.ca/docker-remote/bcgovimages/von-image:py36-1.16-0
+    value: artifacts.developer.gov.bc.ca/docker-remote/python:3.9-slim
   - name: CPU_LIMIT
     displayName: Resources CPU Limit
     description: The resources CPU limit (in cores) for this build.
