Update backup configuration to use environment-specific config files
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/backup/backup-deploy.yaml
+++ b/openshift/templates/backup/backup-deploy.yaml
@@ -250,6 +250,16 @@ objects:
                     secretKeyRef:
                       name: ${PREFIX}${IDIM_QA_WALLET_DB_HOST}
                       key: ${DB_PASSWORD_KEY_NAME}
+                - name: WALLET_LCRB_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: ${PREFIX}${LCRB_WALLET_DB_HOST}
+                      key: ${DB_USER_KEY_NAME}
+                - name: WALLET_LCRB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: ${PREFIX}${LCRB_WALLET_DB_HOST}
+                      key: ${DB_PASSWORD_KEY_NAME}
                 - name: WEBHOOK_URL
                   valueFrom:
                     secretKeyRef:
@@ -389,6 +399,13 @@ parameters:
       particular, this is used to wire up the credentials associated to the database.
     required: true
     value: wallet-idim-qa
+  - name: LCRB_WALLET_DB_HOST
+    displayName: Wallet Database Hostname
+    description:
+      The name associated to the wallet database deployment resources.  In
+      particular, this is used to wire up the credentials associated to the database.
+    required: true
+    value: wallet-lcrb
   - name: DB_USER_KEY_NAME
     displayName: Database User Key Name
     description:
