Add LCRB agent configurations
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/orgbook-issuer-controller/config/lcrb/services.yml
+++ b/openshift/templates/orgbook-issuer-controller/config/lcrb/services.yml
@@ -217,7 +217,7 @@ issuers:
 verifiers:
   bctob:
     name: BC OrgBook
-    alias: aries-vcr
+    alias: orgbook-bc
     connection:
       type: TheOrgBook
       api_url: $TOB_API_URL
