Switch ACAPY_AUTO_ACCEPT_CONNECTIONS to true
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/orgbook-issuer-agent/orgbook-issuer-agent-deploy.yaml
+++ b/openshift/templates/orgbook-issuer-agent/orgbook-issuer-agent-deploy.yaml
@@ -554,7 +554,7 @@ parameters:
     displayName: ACAPY_AUTO_ACCEPT_INVITES
     description: ACAPY_AUTO_ACCEPT_INVITES
     required: true
-    value: 'false'
+    value: 'true'
   - name: ACAPY_AUTO_ACCEPT_REQUESTS
     displayName: ACAPY_AUTO_ACCEPT_REQUESTS
     description: ACAPY_AUTO_ACCEPT_REQUESTS
