Consolidate ledger configuration files for orgbook-issuer-agent
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/orgbook-issuer-agent/config/dev/ledgers-bcreg.yaml
+++ b/openshift/templates/orgbook-issuer-agent/config/dev/ledgers-bcreg.yaml
@@ -1,6 +1,9 @@
-- id: BCovrinTest
+- id: BCovrinDev
   is_production: true
   is_write: true
+  genesis_url: 'http://dev.bcovrin.vonx.io/genesis'
+- id: BCovrinTest
+  is_production: true
   genesis_url: 'http://test.bcovrin.vonx.io/genesis'
 - id: SovrinStagingNet
   is_production: true
