--- a/openshift/templates/issuer-wallet/issuer-wallet-deploy.yaml
+++ b/openshift/templates/issuer-wallet/issuer-wallet-deploy.yaml
@@ -67,7 +67,7 @@ objects:
             from:
               kind: ImageStreamTag
               namespace: ${IMAGE_NAMESPACE}
-              name: ${SOURCE_IMAGE_NAME}:${TAG_NAME}
+              name: ${SOURCE_IMAGE_NAME}:${TAG_PREFIX}${TAG_NAME}
         - type: ConfigChange
       replicas: 1
       test: false
@@ -273,6 +273,12 @@ parameters:
     description: The name of the image to use for this resource.
     required: true
     value: wallet
+
+  - name: TAG_PREFIX
+    displayName: Environment TAG prefix
+    description: The prefix for the TAG name for this environment.
+    required: false
+    value:
   - name: TAG_NAME
     displayName: Environment TAG name
     description: The TAG name for this environment, e.g., dev, test, prod
