--- a/openshift/templates/backup/backup-build.yaml
+++ b/openshift/templates/backup/backup-build.yaml
@@ -73,7 +73,7 @@ parameters:
     displayName: Git Reference
     description: The git reference or branch.
     required: true
-    value: "2.5.1"
+    value: "2.6.0"
   - name: SOURCE_CONTEXT_DIR
     displayName: Source Context Directory
     description: The source context directory.
@@ -88,17 +88,17 @@ parameters:
     displayName: Source Image Registry
     description: The name of the Source Image Registry.
     required: false
-    value: artifacts.developer.gov.bc.ca/docker-remote/
+    value: quay.io/
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the source image.
     required: true
-    value: centos/postgresql-13-centos7
+    value: fedora/postgresql-14
   - name: SOURCE_IMAGE_TAG
     displayName: Source Image Tag
     description: The tag of the source image.
     required: true
-    value: 20210722-70dc4d3
+    value: '14'
   - name: DOCKER_FILE_PATH
     displayName: Docker File Path
     description: The path to the docker file defining the build.
