specify secret name

--- a/openshift/templates/backup/backup-deploy.yaml
+++ b/openshift/templates/backup/backup-deploy.yaml
@@ -162,12 +162,12 @@ objects:
                 - name: TRACTION_DTS_DATABASE_USER
                   valueFrom:
                     secretKeyRef:
-                      name: ${PREFIX}${TRACTION_DTS_DB_HOST}
+                      name: ${PREFIX}${TRACTION_DTS_DB_SECRET}
                       key: ${DB_USER_KEY_NAME}
                 - name: TRACTION_DTS_DATABASE_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: ${PREFIX}${TRACTION_DTS_DB_HOST}
+                      name: ${PREFIX}${TRACTION_DTS_DB_SECRET}
                       key: ${DB_PASSWORD_KEY_NAME}
                 - name: VC_AUTHN_DATABASE_USER
                   valueFrom:
@@ -325,6 +325,13 @@ parameters:
     description: The TAG name for this environment, e.g., dev, test, prod
     required: true
     value: dev
+  - name: TRACTION_DTS_DB_SECRET
+    displayName: Database secret Name
+    description:
+      The name associated to the database secret resources.  In particular,
+      this is used to wire up the credentials associated to the database.
+    required: true
+    value: traction-dts-db
   - name: TRACTION_DTS_DB_HOST
     displayName: Database Deployment Name
     description:
