--- a/openshift/templates/backup/backup-deploy.yaml
+++ b/openshift/templates/backup/backup-deploy.yaml
@@ -159,7 +159,7 @@ objects:
                   value: ${WEEKLY_BACKUPS}
                 - name: MONTHLY_BACKUPS
                   value: ${MONTHLY_BACKUPS}
-                - name: TRACTION_DTS_DATABASE_USER
+                - name: TRACTION_DTS_USER
                   valueFrom:
                     secretKeyRef:
                       name: ${PREFIX}${TRACTION_DTS_DB_SECRET}
